chore(network): implement network broadcast
