# sponge/spongejs/swagger_output.json
@@ -121,6 +121,17 @@
           }
         }
       }
+    },
+    "/network/broadcast": {
+      "post": {
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
     }
   }
 }
